<resources>
    <string name="app_name">Parceler Example</string>

    <string name="action_view_source">View source</string>
    <string name="github_url">https://github.com/first087/Android-Parceler-Example</string>

    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="fullname">Fullname</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="result">Result</string>
    <string name="dash">-</string>
    <string name="send">Send</string>
</resources>
